# low-code-modeler

./: .env  Dockerfile  README.md  docker-compose.yml  index.html  package.json  pnpm-lock.yaml  pyproject.toml  vite.config.ts
.github/workflows/: docker-image.yml  docs.yml
backend/: package-lock.json  package.json  server.ts
docs/: .gitignore  README.md  conf.py  disclaimer.rst  index.rst  modelingconstructs_boundaryNodes.rst  modelingconstructs_circuitLevelNodes.rst  modelingconstructs_controlStructureNodes.rst  modelingconstructs_customNodes.rst  modelingconstructs_dataTypes.rst  modelingconstructs_mlNodes.rst  modelingconstructs_operators.rst  project_introduction.rst  quantum_clustering_template.json  usecases.rst  usecases_usecase1.rst  usecases_usecase2.rst
docs/_templates/: sbom-template.tmpl
docs/dev/: sbom.rst
docs/gate_level/: bell_state_phi_minus.json  bell_state_phi_plus.json  bell_state_psi_minus.json  bell_state_psi_plus.json  cnot.json  custom_state.json  dynamic_circuit.json  ghz3.json  hadamard.json  pauliX.json  pauliY.json  pauliZ.json  rx.json  ry.json  rz.json  simple_circuit.json  toffoli.json
docs/measurement/: indices_register_measurement.json  one_qubit_measurement.json
docs/state_preparation/encodings/: amplitude_encoding.json  angle_encoding.json  basis_encoding_float.json  basis_encoding_int.json
docs/state_preparation/states/: bell_state_phi_minus.json  bell_state_phi_plus.json  bell_state_psi_minus.json  bell_state_psi_plus.json  custom_state.json  ghz3.json  uniform_superposition.json  wstate3.json
docs/thesis/concept/: boundary_nodes.json  circuit_level_nodes.json  classical_datatypes.json  classical_operators.json  custom_nodes.json  quantum_datatypes.json  quantum_operator_nodes.json
docs/thesis/implementation/: error_message.json  user_interface.json
docs/thesis/validation/: addition_comparison_operator.json  (+13 more)
docs/usage/: annotations.rst
src/: App.tsx  Modal.tsx  backend.ts  backend.types.ts  index.css  main.tsx  winery.ts  workflowgenerator.ts  yjs.tsx
src/components/: contextMenu.tsx  index.ts  palette.tsx  panel.tsx  toolbar.tsx
src/config/: site.ts  store.ts
src/constants/: index.tsx  patterns.ts  templates.tsx
src/lib/: utils.ts
(+56 files in other folders)
