[project]
name = "leqo-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.8",
    "networkx>=3.4.2",
    "openqasm3[parser]>=1.0.1",
    "psycopg>=3.2.6",
    "psycopg-binary>=3.2.6",
    "pydantic-settings>=2.9.1",
    "python-dotenv>=1.0.1",
    "sqlalchemy[asyncio,mypy]>=2.0.38",
]

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "myst-parser>=4.0.0",
    "openqasm-pygments>=0.1.2",
    "pytest>=8.3.4",
    "ruff>=0.9.4",
    "types-networkx>=3.4.2",
    "testcontainers[postgres]>=4.10.0",
    "sphinx>=8.1.3",
    "sphinx-autobuild>=2024.10.3",
    "sphinx-rtd-theme>=3.0.2",
    "sphinxcontrib-openapi>=0.8.4",
    "sphobjinv>=2.3.1.2",
    "sphinx-autoapi>=3.6.0",
    "pytest-cov>=6.1.1",
    "pytest-asyncio>=0.26.0",
    "types-pyyaml>=6.0.12.20250516",
    "cyclonedx-bom>=6.1.1",
    "sphinxcontrib-datatemplates>=0.11.0",
]

# https://github.com/DSD-DBS/py-capellambse/blob/b0d63fac33c90d15f0d2d4c6c111184a5801ce6c/pyproject.toml#L174-L204
[tool.ruff.lint]
extend-select = [
    "ARG", # flake8-unused-arguments
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "ERA", # eradicate
    "FA", # flake8-future-annotations
    "FAST", # Fastapi
    "FURB", # refurb
    "G", # flake8-logging-format
    "I", # isort
    "ICN", # flake8-import-conventions
    "ISC001", # "Implicitly concatenated string literals on one line"
    "ISC003", # "Explicitly concatenated string should be implicitly concatenated"
    "LOG", # flake8-logging
    "PIE", # flake8-pie
    "PL", # pylint
    "PT", # flake8-pytest-style
    "RET", # flake8-return
    "RUF", # ruff
    "SIM", # flake8-simplify
    "TC005", # "Found empty type-checking block"
    "T1", # flake8-debugger
    "UP", # pyupgrade
    "YTT", # flake8-2020
]

[tool.mypy]
ignore_missing_imports = true
plugins = "sqlalchemy.ext.mypy.plugin"

[[tool.mypy.overrides]]
module = "qiskit.qasm3"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
